# Gold-Band

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GOLD_BAND_PLAN.md  README.md  README.zh-CN.md  draft.md  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: release-please.yml  release.yml
configs/: app-config.json  app-config.toml  feature-flags.json
configs/channels/: default.json  wb.json
docs/: acp-conversation-flow-analysis.md
scripts/: channel-config.mjs  channel-config.test.mjs  generate-updater-json.mjs  release-tag.mjs  sync-version.mjs
src/: dynamic.rs  lib.rs  main.rs  process.rs  prompts.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: builtin_mcp.rs  channel.rs  commands.rs  commands_conversation.rs  i18n.rs  main.rs  metrics.rs  notifications.rs  state.rs  updater.rs  view_models.rs  view_models_conversation.rs
src/acp/: adapter.rs  client.rs  connection.rs  elicitation.rs  events.rs  mod.rs  permission.rs
tests/: acceptance_loop_and_commands.rs  ai_dynamic_node.rs  authoring_workflow.rs  console_explorer_and_artifacts.rs  console_help_and_history.rs  console_parser.rs  control_engine.rs  dsl_validation.rs  full_mvp_flow.rs  provider_output_priority.rs  provider_prompt_bundle.rs  runtime_layout.rs  unicode_timeline_transition.rs  worker_bootstrap.rs  worker_exec_happy_path.rs  worker_happy_path.rs
web/: index.html  tsconfig.json  vite.config.ts
(+363 files in other folders)
